blueprints/gke/hpc/bundle/monitoring/grafana.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "grafana"
    kubernetes.io/ingress.allow-http: "true"  
spec:
  defaultBackend:
    service:
      name: grafana
      port:
        name: web  
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/app-protocols: '{"web":"HTTP"}'
    cloud.google.com/backend-config: '{"default": "backendconfig"}'
spec:
  clusterIP: None
  selector:
    app: grafana
  ports:
  - name: web
    port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      tolerations:
        - key: group
          operator: Equal
          value: monitoring
          effect: NoSchedule
      nodeSelector:
        group: monitoring
      containers:
      - name: grafana
        image: grafana/grafana:8.3.4
        ports:
        - name: web
          containerPort: 3000
        volumeMounts:
          - name: config
            mountPath: "/etc/grafana/grafana.ini"
            subPath: grafana.ini
          - name: storage
            mountPath: "/var/lib/grafana"
          - name: k8s-grafana-dashboards
            mountPath: "/var/lib/grafana/dashboards/k8s"
          - name: kueue-grafana-dashboards
            mountPath: "/var/lib/grafana/dashboards/kueue"
          - name: config
            mountPath: "/etc/grafana/provisioning/datasources/datasources.yaml"
            subPath: "datasources.yaml"
          - name: config
            mountPath: "/etc/grafana/provisioning/dashboards/dashboardproviders.yaml"
            subPath: "dashboardproviders.yaml"
        resources:
          requests:
            cpu: 30m
            memory: 100Mi
          limits:
            memory: 100Mi
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 60
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000                     
      volumes:
        - name: config
          configMap:
            name: grafana 
        - name: k8s-grafana-dashboards
          configMap:
            name: k8s-grafana-dashboards
        - name: kueue-grafana-dashboards
          configMap:
            name: kueue-grafana-dashboards
        - name: storage
          emptyDir: {}
